@@ -1,3 +1,5 @@
+import java.lang.management.ManagementFactory
+
 plugins {
     id 'java'
     id 'io.quarkus'
@@ -13,6 +15,10 @@ dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-resteasy'
+    implementation "com.jq:jq-truffle:1.0"
+    implementation group: 'io.quarkus', name: 'quarkus-resteasy-jsonb', version: '1.12.2.Final'
+    implementation "org.graalvm.sdk:graal-sdk:21.0.0.2"
+
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
 }
@@ -32,4 +38,8 @@ compileJava {
 
 compileTestJava {
     options.encoding = 'UTF-8'
+}
+
+tasks.withType(io.quarkus.gradle.tasks.QuarkusDev) {
+    jvmArgs = ["-ea", "--add-exports","org.graalvm.sdk/org.graalvm.polyglot.impl=ALL-UNNAMED"]
 }
